[package]
name = "mcwr"
version = "0.1.0"
authors = ["DaCaseo <34115435+DaCaseo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmux_interface = "0.0.6"
structopt = "0.3.15"
confy = "0.4.0"
